# LiveTranslator

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
LiveTranslator/: CMakeLists.txt
LiveTranslator/include/: LiveTranslator.h  LiveTranslator.ui  ScreenGrabber.h
LiveTranslator/include/capture/: ScreenGrabber.h
LiveTranslator/include/processing/: ImageProcessor.h
LiveTranslator/include/translators/: GoogleTranslator.h  Translator.h  TranslatorFactory.h
LiveTranslator/include/ui/: CaptureOverlay.h  TranslationLabel.h  TranslationLabel.ui
LiveTranslator/include/utils/: LanguageManager.h  RESTApiHandler.h  Settings.h  TranslationApi.h
LiveTranslator/include/workers/: OcrWorker.h
LiveTranslator/resources/: languages.json  languages.qrc
LiveTranslator/src/: LiveTranslator.cpp  ScreenGrabber.cpp  main.cpp
LiveTranslator/src/capture/: ScreenGrabber.cpp
LiveTranslator/src/processing/: ImageProcessor.cpp
LiveTranslator/src/translators/: GoogleTranslator.cpp  TranslatorFactory.cpp
LiveTranslator/src/ui/: CaptureOverlay.cpp  TranslationLabel.cpp
LiveTranslator/src/utils/: LanguageManager.cpp  RESTApiHandler.cpp  Settings.cpp  TranslationApi.cpp
LiveTranslator/src/workers/: OcrWorker.cpp
